Refactor launcher to use classpath and main class for RuneLite startup; mark step complete